tests/typing/bad/testfile-string-2.scala

class A { }
class B { def main() { var s: String = new A() } }
object Main { def main(args: Array[String]) { } }
